# python-ngoschema

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  NGOSCHEMA.mm  README.rst  ngoschema.mm  setup.cfg  setup.py  tox.ini
.templates/: tox.ini
ci/: appveyor-download.py  bootstrap.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  ngoschema.rst  requirements.txt  schemas.rst  usage.rst
docs/reference/: index.rst  ngoschema.rst
docs/source/: conf.py  index.rst
examples/: basic_example.py  hybrid_class_example.py
ngoschema/: __init__.py  classbuilder.py  decorators (conflicted copy 2020-09-11 151726).py  decorators.py  descriptors.py  exceptions.py  literals.py  protocol_base.py  query.py  registries.py  relationships.py  repositories.py  resolver.py  schema_metaclass.py  schemas_loader.py  session.py  wrapper_types.py
ngoschema/cli/: __init__.py
ngoschema/config/: __init__.py  settings.py  utils.py
ngoschema/contexts/: __init__.py  context.py  entity_context.py  instance_context.py  ns_manager_context.py  object_contexts.py  object_protocol_context.py
ngoschema/datatypes/: __init__.py  array.py  boolean.py  collection.py  compositions.py  constants.py  datetime.py  foreign_key.py  numerics.py  object.py  strings.py  symbols.py  type.py  uri.py
ngoschema/inspect/: __init__.py  ast.py  doc_rest_parser.py  inspect_objects.py  inspect_symbols.py
ngoschema/loaders/: __init__.py  module.py  schemas.py
ngoschema/managers/: __init__.py  context.py  jsch_validators.py  namespace_manager.py  relationship_builder.py  type_builder.py
ngoschema/mixins/: mixins.py
ngoschema/models/: __init__.py  datasets.py  document.py  documents.py  entities.py  entity.py  files.py  foreign_key.py  generic_object.py  inspect.py  instances.py  metadata.py  relationship.py  relationships.py  symbols.py
ngoschema/protocols/: __init__.py  array_protocol.py  checker.py  collection_protocol.py  context.py  converter.py  file_loader.py  loader.py  object_protocol.py  repository.py  resolver.py  serializer.py  transformer.py  type_builder_old.py  type_protocol.py  type_proxy.py  validator.py
ngoschema/relationships/: __init__.py  relationships.py
ngoschema/relationships_/: __init__.py
ngoschema/repositories/: __init__.py  file_repositories.py  memory_repository.py
ngoschema/resolvers/: uri_resolver.py
ngoschema/schemas/: document.json  inspect.json  ngo-draft-05.json  ngo-draft-06.json  ngoschema.json  ngoschema_.json  object-transform.json  repositories.json  repository.json  session.json
ngoschema/serializers/: __init__.py  csv_serializer.py  fields.py  file_serializer.py  instances_serializer.py  json_serializer.py  serializer.py  xml_serializer.py  yaml_serializer.py
ngoschema/transforms/: __init__.py  object_transform.py
ngoschema/types/: __init__.py  array.py  array_protocol.py  boolean.py  collection.py  complex.py  constants.py  datetime.py  foreign_key.py  (+13 more)
tests/: run-tests.py  test_base_objects.py  test_cache_invalidation.py  test_config.py  test_decorators.py  test_doc_parser.py  test_document_registry.py  test_fields.py  test_html_order.py  test_inspect_objects.py  test_namespace_manager.py  test_object_handlers.py  test_pjo.py  test_pseudo_literals.py  test_query.py  test_relationship.py  test_repositories.py  test_schema_resolver.py  test_schema_validation.py  test_serializer.py  test_serializers.py  test_session.py  test_transform.py  test_types.py  test_types_object_protocol.py  test_types_symbols.py  test_utils.py
(+157 files in other folders)
